setting ranking module

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <script src="{{ url_for('static', filename='modules/Common/Common.js') }}"></script>
   <script src="{{ url_for('static', filename='modules/Modal/Modal.js') }}"></script>
   <script src="{{ url_for('static', filename='modules/Handler/Handler.js') }}"></script>
+  <script src="{{ url_for('static', filename='modules/List/RankingList.js') }}"></script>  
 
   <script src="{{ url_for('static', filename='modules/Status/StatusScore.js') }}"></script>
   <script src="{{ url_for('static', filename='modules/Status/StatusMode.js') }}"></script>
